--- a/wiki/MacBuildOpenMalaria.wiki
+++ b/wiki/MacBuildOpenMalaria.wiki
@@ -4,7 +4,7 @@
 
 Dependencies for the mac build are  similar to those required for the [UnixBuildOpenMalaria unix build]. However, be aware that several libraries and toolkits haven't yet been ported over to MAC OS X 10.7 Snow Leopard, and in particular, for Xcode 4.3 does not support gcc tools.  For that specific reason, we suggest you go no higher than Xcode 4.2.
 
-For example, you will need to build python GTK from source, which as of this writing has not yet been ported to snow leopard and is required to build the openmalariaTools front end.   If you can't be persuaded to  save yourself some trouble, and run openmalaria and openmalariaTools under ubuntu on a linux virtual machine, then be prepared to roll up your sleeve and get a cup of coffee before diving in. Let us know how you get on.
+For example, you will need to build python GTK from source, which as of this writing has not yet been ported to snow leopard and is required to build the OpenMalariaTools front end.   If you can't be persuaded to  save yourself some trouble, and run OpenMalaria and OpenMalariaTools under ubuntu on a linux virtual machine, then be prepared to roll up your sleeve and get a cup of coffee before diving in. Let us know how you get on.
 
 = Backward compatibility =
 
@@ -12,7 +12,7 @@ To ensure backward compatibility, specify the older SDK version you'd like to us
 
 = Building =
 
-After checking out the source code, and building all the dependencies that haven't yet been ported to MAC OS X,  you have two options to build openmalaria:
+After checking out the source code, and building all the dependencies that haven't yet been ported to MAC OS X,  you have two options to build OpenMalaria:
 
  * Use Xcode (see below)
  * Use Makefiles (well described on the [UnixBuildOpenMalaria unix] page - in this case, recall that you must specify the use of the gcc complier and linker)
