--- a/wiki/ModelTransmission.wiki
+++ b/wiki/ModelTransmission.wiki
@@ -1,12 +1,12 @@
 = Transmission =
 
-The transmission sub-models within *openmalaria* describe inter-human transmission of malaria, taking modeled values of human infectiousness to mosquitoes as input and translating this into subsequent human exposure to infectious mosquitoes (as inoculations per person per year, denoted EIR: Entomological Infection Rate).  The human's relative availability to mosquitoes is taken into account in both cases.  The simulator is designed to simulate seasonally forced transmission,_ i.e._, we assume that in the absence of interventions the EIR recurs annually with the same seasonal pattern.
+The transmission sub-models within *OpenMalaria* describe inter-human transmission of malaria, taking modeled values of human infectiousness to mosquitoes as input and translating this into subsequent human exposure to infectious mosquitoes (as inoculations per person per year, denoted EIR: Entomological Infection Rate).  The human's relative availability to mosquitoes is taken into account in both cases.  The simulator is designed to simulate seasonally forced transmission,_ i.e._, we assume that in the absence of interventions the EIR recurs annually with the same seasonal pattern.
 
-*openmalaria* currently supports two distinct sets of algorithms for transmission models:  vector transmission and non-vector transmission.
+*OpenMalaria* currently supports two distinct sets of algorithms for transmission models:  vector transmission and non-vector transmission.
 
 == Vector transmission ==
 
-The vector transmission model used by *openmalaria* is required for modeling interventions that have effects on mosquitoes, and hence change the vectorial capacity.  
+The vector transmission model used by *OpenMalaria* is required for modeling interventions that have effects on mosquitoes, and hence change the vectorial capacity.  
 
 Simulations that include non-periodic changes in the vectorial capacity use a seasonally forced version of the difference equation model for vector dynamics of [http://dx.doi.org/10.1080/17513750701769857 Chitnis et al (2008)Journal of Biological Dynamics Vol. 2, No. 3, July 2008, 259–285], further described in [http://www.ajtmh.org/cgi/content/full/83/2/230 Chitnis et al (2010) American Journal of Tropical Medicine and Hygiene Vol. 83, No. 2, 230--240].
 
