--- a/wiki/ModelWithinHost.wiki
+++ b/wiki/ModelWithinHost.wiki
@@ -2,7 +2,7 @@
 
 = Within-host infection models =
 
-The models associated with the calculation of parasite densities within human hosts are, in OpenMalaria, referred to as the within-host models. Within the openmalaria code, these reside within the `WithinHost` namespace and classes (excepting the gametocyte model).
+The models associated with the calculation of parasite densities within human hosts are, in OpenMalaria, referred to as the within-host models. Within the OpenMalaria code, these reside within the `WithinHost` namespace and classes (excepting the gametocyte model).
 
 This category covers the following models:
 
@@ -18,4 +18,4 @@ In some way the [ModelDrug drug models] could also be considered within-host mod
 Currently implemented models are:
  # [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] (implemented in the `DescriptiveInfection` class).  This model takes, as a representation of a malaria infection in a naive human, a statistical description of the parasite densities over time during a malariatherapy infection, with stochastic noise added independently at each time point.  Acquired immunity, due to previous exposure, is assumed to reduce these parasite densities.  This model uses discrete 5-day time-steps.
  # (As-yet no publication; implemented in the `EmpiricalInfection` class). This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations. This model uses discrete 1-day time-steps.  
- # [http://journals.cambridge.org/action/displayAbstract?aid=76599 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The `openMalaria` implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate. Drug-, vaccine-, and natural immune effects of previous exposure are represented by further modifying the parasite multiplication rates. 
+ # [http://journals.cambridge.org/action/displayAbstract?aid=76599 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The *OpenMalaria* implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate. Drug-, vaccine-, and natural immune effects of previous exposure are represented by further modifying the parasite multiplication rates. 
