--- a/wiki/UnixBuildBoinc.wiki
+++ b/wiki/UnixBuildBoinc.wiki
@@ -1,8 +1,8 @@
-#summary Installing boinc development files to allow compiling openmalaria for deployment.
+#summary Installing boinc development files to allow compiling OpenMalaria for deployment.
 
 = Introduction =
 
-The following instructions are  _only_ necessary for building a release for malariacontrol.net. For development of openmalaria itself,  boinc-integration can be disabled. For participating in the volunteer computing, go to [malariacontrol.net] or install [http://boinc.berkeley.edu/wiki/System_requirements boinc] from your distribution's packages.
+The following instructions are  _only_ necessary for building a release for malariacontrol.net. For development of OpenMalaria itself,  boinc-integration can be disabled. For participating in the volunteer computing, go to [malariacontrol.net] or install [http://boinc.berkeley.edu/wiki/System_requirements boinc] from your distribution's packages.
 
 You may just be able to use the [http://packages.debian.org/search?keywords=boinc-dev boinc-dev] package. Otherwise, read on...
 
