--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file generally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to openmalaria). The XML file has several sections corresponding to specific model blocks.   If you are new to XML, there is a nice tutorial of the XSD schema  [http://www.w3schools.com/schema/default.asp here]. You can view our base scenario [http://code.google.com/p/openmalaria/source/browse/trunk/schema/scenario.xsd here].
+The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file generally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to OpenMalaria). The XML file has several sections corresponding to specific model blocks.   If you are new to XML, there is a nice tutorial of the XSD schema  [http://www.w3schools.com/schema/default.asp here]. You can view our base scenario [http://code.google.com/p/openmalaria/source/browse/trunk/schema/scenario.xsd here].
 
 
 == Scope of documentation ==
